添加 mastodon-thread-link-en

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <hr>
         <p>如果您在 Fediverse 平台（如 Mastodon 和 Misskey 等）擁有帳戶，歡迎透過回覆 <a id="mastodon-thread-link" target="_blank" style="text-decoration: underline; ">此條串文</a> 寫下對這篇博文的想法。您的留言將會被同步至本頁面。</p>
         <p>You can use your Mastodon account to comment on this post by replying to 
-            <a id="mastodon-thread-link" target="_blank" style="text-decoration: underline; ">this thread</a>.</p>
+            <a id="mastodon-thread-link-en" target="_blank" style="text-decoration: underline; ">this thread</a>.</p>
         <!-- Collapsible Guideline -->
         <hr>
         <div class="guideline">
