修正一些英文表述

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
     <!-- Back to Blog Link -->
-    <a href="https://wuliang.bearblog.dev/" class="back-link">← Back to Blog</a>
+    <a href="https://wuliang.bearblog.dev/" class="back-link">← 返回無糧殿·Back to Blog</a>
 
     <h1>留言區·Comments</h1>
 
@@ -29,7 +29,7 @@
     <div class="instructions">
         <hr>
         <p>如果您在 Fediverse 平台（如 Mastodon 和 Misskey 等）擁有帳戶，歡迎透過回覆 <a id="mastodon-thread-link" target="_blank" style="text-decoration: underline; ">此條串文</a> 寫下對這篇博文的想法。您的公開留言將會被同步至本頁面。</p>
-        <p>You can use your Mastodon account to comment on this post by replying to 
+        <p>You can use your Fediverse account to comment on this post by replying to 
             <a id="mastodon-thread-link-en" target="_blank" style="text-decoration: underline; ">this thread</a>.</p>
         <!-- Collapsible Guideline -->
         <hr>
@@ -43,7 +43,7 @@
                 <p>原因2：這裡只會顯示來自 Fediverse 的公開留言。如果留言的隱私設定是「僅限跟隨者」或「指定使用者」，您將無法在本頁面上看到它。</p>
                 <p>（以 Mastodon 爲例，所謂「公開留言」是指，隱私設定爲「公共（Mastodon 内外的任何人）」或「半公開（較少用演算法推薦）」的留言。）</p>
                 <p>It could be that nobody has responded to the blog post yet.</p>
-                <p>Another possibility is that only public comments from Mastodon and Fediverse will show up here. (e.g. when posting a comment on Mastodon, make sure to choose "public" or "quiet public" to have it show up.) If a comment is meant for "followers" or just for a specific person, you won't be able to see it.</p>
+                <p>Another possibility is that only public comments from Fediverse will show up here. (e.g. when posting a comment on Mastodon, make sure to choose "public" or "quiet public" to have it show up.) If a comment is meant for "followers" or just for a specific person, you won't be able to see it.</p>
             </div>
         </div>
         <hr>
